# minecraft-stdat-viewer

./: Cargo.toml
src/: main.rs
